add_library(Scene
specific.h
stdafx.cpp
stdafx.h
Camera.cpp
Camera.h
Camera.hpp
Animation.component
Animators.cpp
Animators.h
AnimGraphApplicator.cpp
AnimGraphApplicator.hpp
AnimGraphBlender.cpp
AnimGraphBlender.h
AnimGraphController.cpp
AnimGraphController.h
AnimSequencer.cpp
AnimSequencer.hpp
DiAnGr.cpp
DiAnGr.h
DiAnGr.inl
DiAnGrAPI.cpp
DiAnGrAPI.h
DiAnGrCl.cpp
DiAnGrDb.cpp
DiAnGrEditor.cpp
DiAnGrExtPars.cpp
DiAnGrExtPars.h
DiAnGrExtParsAd.cpp
DiAnGrExtParsAd.h
DiAnGrG.cpp
DiAnGrIo2.cpp
DiAnGrMarker.cpp
DiAnGrMarker.h
DiAnGrNLinker.cpp
DiAnGrNLinker.h
DiAnGrSStorage.cpp
DiAnGrSStorage.h
DiAnGrUp.cpp
DiAnGrUtils.cpp
DiAnGrUtils.h
DiAnSol.h
DiGraph.cpp
DiGraph.h
DiM4d.inl
dimath.h
DiMath.inl
DiMathOp.inl
DiMatrix.h
DiTypes.h
DiV2d.inl
DiV3d.inl
DiV4d.inl
DiVector.h
SequencerData.hpp
TimedChannel.h
DB.component
DBScene.cpp
DBScene.h
include_BaseVisualObject.h
include_VisualObject.h
AnimatedPlacement.h
HeightsController.cpp
HeightsController.h
PointSelector.h
RenderableScene.h
Scene.cpp
Scene.h
Scene.hpp
SceneComponent.cpp
SceneComponent.h
SceneObject.cpp
SceneObject.h
SceneObjectsPool.cpp
SceneObjectsPool.h
SceneObjectTrack.cpp
SceneObjectTrack.h
SceneObjectUtils.cpp
SceneObjectUtils.h
ScenePassabilityMask.cpp
ScenePassabilityMask.h
SceneTypes.h
SceneUtils.cpp
SceneUtils.h
SHGrid.cpp
SHGrid.h
SHGridCalculator.cpp
SHGridCalculator.h
TimeController.cpp
TimeController.h
TimeMutator.cpp
TimeMutator.h
VertexColorManager.cpp
VertexColorManager.h
Collision.component
CollisionGeometry.cpp
CollisionGeometry.h
CollisionGeometryManager.cpp
CollisionGeometryManager.h
CollisionHull.cpp
CollisionHull.h
CollisionMap.cpp
CollisionMap.h
CollisionVolumeNode.h
GeometryBuilders.cpp
GeometryBuilders.h
GeometryTracer.cpp
GeometryTracer.h
Octree.h
AnimatedSceneComponent.cpp
AnimatedSceneComponent.h
AnimatedSplitSceneComponent.cpp
AnimatedSplitSceneComponent.h
AnimSequencer.h
AttacherSceneComponent.cpp
AttacherSceneComponent.h
EditorSceneObject.cpp
EditorSceneObject.h
LightningSceneComponent.cpp
LightningSceneComponent.h
ParticleSceneComponent.cpp
ParticleSceneComponent.h
RoadGeometryBuilder.cpp
RoadGeometryBuilder.h
RoadSceneObject.cpp
RoadSceneObject.h
SceneObjectCreation.cpp
SceneObjectCreation.h
SceneObjects.component
SoundSceneComponent.cpp
SoundSceneComponent.h
StaticSceneComponent.cpp
StaticSceneComponent.h
TestBB.h
TraceSceneComponent.cpp
TraceSceneComponent.h
WaterSceneComponent.cpp
WaterSceneComponent.h
CollectionList.h
CollectionVG.h
VoxelGrid.component
VoxelGrid.h
VoxelGridObj.h
LightningFX.cpp
LightningFX.h
TraceFX.cpp
TraceFX.h
TraceFXGeo.cpp
TraceFXGeo.h
TestObject.h
TestSceneComponent.cpp
TestSceneComponent.h
CameraController.h
CameraControllersContainer.cpp
CameraControllersContainer.h
CameraInputModifier.cpp
CameraInputModifier.h
FreeCameraController.cpp
FreeCameraController.hpp
all.component
AmbienceMap.cpp
AmbienceMap.h
BitMap.cpp
BitMap.h
Camera.component
DBSceneBase.cpp
DBSceneBase.h
LightingScene.cpp
LightingScene.h
SceneObject.component
Sound.component
#../Version.rc ExcludedFromBuild
)
target_include_directories(Scene PRIVATE ${SRCROOT})
