add_library(Scripts
specific.h
stdafx.cpp
stdafx.h
FuncCallMacroses.h
lua.hpp
Script.cpp
Script.h
ScriptMacroses.h
 NameMap.cpp
 NameMap.h
CAsserts.cpp
CAsserts.h
lua/pluto.c
lua/pluto.h
 lua/lapi.h
 lua/lauxlib.h
 lua/lcode.h
 lua/ldebug.h
 lua/ldo.h
 lua/lfunc.h
 lua/lgc.h
 lua/llex.h
 lua/llimits.h
 lua/lmem.h
 lua/lobject.h
 lua/lopcodes.h
 lua/lparser.h
 lua/lstate.h
 lua/lstring.h
 lua/ltable.h
 lua/ltm.h
 lua/lua.h
 lua/luaconf.h
 lua/lualib.h
 lua/lundump.h
 lua/lvm.h
 lua/lzio.h
 lua/lapi.c
 lua/lauxlib.c
 lua/lbaselib.c
 lua/lcode.c
 lua/ldblib.c
 lua/ldebug.c
 lua/ldo.c
 lua/ldump.c
 lua/lfunc.c
 lua/lgc.c
 lua/linit.c
 lua/liolib.c
 lua/llex.c
 lua/lmathlib.c
 lua/lmem.c
 lua/loadlib.c
 lua/lobject.c
 lua/lopcodes.c
 lua/loslib.c
 lua/lparser.c
 lua/lstate.c
 lua/lstring.c
 lua/lstrlib.c
 lua/ltable.c
 lua/ltablib.c
 lua/ltm.c
 lua/lundump.c
 lua/lvm.c
 lua/lzio.c
 lua/print.c
ScriptLog.cpp
ScriptLog.h
LuaBase.h
LuaCommon.cpp
LuaCommon.h
LuaComplexTypes.cpp
LuaComplexTypes.h
LuaConstants.cpp
LuaConstants.h
LuaMetaData.h
LuaPreprocessor.cpp
LuaPreprocessor.h
LuaSubclass.cpp
LuaSubclass.h
LuaTableLinks.cpp
LuaTableLinks.h
LuaTableLinksImpl.h
LuaValues.cpp
LuaValues.h
all.component
lua/all.component
#../Version.rc ExcludedFromBuild
)
target_include_directories(Scripts PRIVATE ${SRCROOT})
