add_library(naio
naio/Acceptor.cpp
naio/Acceptor.h
naio/AcceptorHandle.cpp
naio/AcceptorHandle.h
naio/BaseProtocol.cpp
naio/BaseProtocol.h
naio/BaseProtocolFactory.cpp
naio/BaseProtocolFactory.h
naio/Cfg.cpp
naio/Cfg.h
naio/Channel.cpp
naio/Channel.h
naio/ChannelContext.cpp
naio/ChannelContext.h
naio/ChannelManager.cpp
naio/ChannelManager.h
naio/ConnectionContext.cpp
naio/ConnectionContext.h
naio/Connector.cpp
naio/Connector.h
naio/Driver.cpp
naio/Driver.h
naio/Operation.cpp
naio/Operation.h
naio/Ops.cpp
naio/Ops.h
naio/OpScope.h
naio/ProtocolHandler.h
naio/specific.h
naio/Status.h
naio/stdafx.cpp
naio/stdafx.h
naio/ThreadPool.cpp
naio/ThreadPool.h
naio/Types.h
#../../Version.rc ExcludedFromBuild
)
target_include_directories(naio PRIVATE ${SRCROOT})
add_library(transport
transport/specific.h
transport/stdafx.cpp
transport/stdafx.h
transport/TLAddRecipientOp.cpp
transport/TLAddRecipientOp.h
transport/TLAddressResolver.h
transport/TLCfg.cpp
transport/TLCfg.h
transport/TLChannel.cpp
transport/TLChannel.h
transport/TLChannelBase.cpp
transport/TLChannelBase.h
transport/TLChannelFactory.cpp
transport/TLChannelFactory.h
transport/TLChannelInt.cpp
transport/TLChannelInt.h
transport/TLChannelListener.cpp
transport/TLChannelListener.h
transport/TLChannelOp.cpp
transport/TLChannelOp.h
transport/TLChannelWrapper.cpp
transport/TLChannelWrapper.h
transport/TLCloseChannelOp.cpp
transport/TLCloseChannelOp.h
transport/TLConnection.cpp
transport/TLConnection.h
transport/TLConnectionManager.cpp
transport/TLConnectionManager.h
transport/TLConnectionOutputOp.cpp
transport/TLConnectionOutputOp.h
transport/TLDataHandler.cpp
transport/TLDataHandler.h
transport/TLDefaultLogCallback.cpp
transport/TLDefaultLogCallback.h
transport/TLGlobalCfg.cpp
transport/TLGlobalCfg.h
transport/TLInPlaceMessageBlockFactory.cpp
transport/TLInPlaceMessageBlockFactory.h
transport/TLMulticastChannel.cpp
transport/TLMulticastChannel.h
transport/TLOpenChannelOp.cpp
transport/TLOpenChannelOp.h
transport/TLOpsPtr.h
transport/TLPingChannelOp.cpp
transport/TLPingChannelOp.h
transport/TLProtocolHandler.cpp
transport/TLProtocolHandler.h
transport/TLProtocolHandlerFactory.cpp
transport/TLProtocolHandlerFactory.h
transport/TLRemoveRecipientOp.cpp
transport/TLRemoveRecipientOp.h
transport/TLSendDataOp.cpp
transport/TLSendDataOp.h
transport/TLTransportModule.cpp
transport/TLTransportModule.h
transport/TLTransportProtocol.cpp
transport/TLTransportProtocol.h
transport/TLTypes.h
transport/todo.txt
../../Network/ClientTransportConfig.component
../../Network/ClientTransportConfig.cpp
../../Network/ClientTransportConfig.h
../../Network/ClientTransportSystem2.cpp
../../Network/ClientTransportSystem2.h
../../Network/ClientTransportSystem3.cpp
../../Network/ClientTransportSystem3.h
../../Network/ClientTransportSystemIntf.h
../../Network/SecondaryRelayCtx.cpp
../../Network/SecondaryRelayCtx.h
netlayer/NLNetworkHandler.cpp
netlayer/NLNetworkHandler.h
netlayer/specific.h
netlayer/stdafx.cpp
netlayer/stdafx.h
transport/transport.refs
#../../Version.rc ExcludedFromBuild
)
target_include_directories(transport PRIVATE ${SRCROOT})
add_library(mballocator
mballocator/MessageBlock.cpp
mballocator/MessageBlock.h
mballocator/MessageBlockAllocator.cpp
mballocator/MessageBlockAllocator.h
mballocator/MessageBlockFactory.cpp
mballocator/MessageBlockFactory.h
mballocator/MessageBlockType.h
mballocator/specific.h
mballocator/stdafx.cpp
mballocator/stdafx.h
mballocator/Types.h
)
target_include_directories(mballocator PRIVATE ${SRCROOT})
