add_library(RPC
../DebugVarUpdate/DebugVarReporter.cpp
../DebugVarUpdate/DebugVarReporter.h
../DebugVarUpdate/DebugVarRequester.cpp
../DebugVarUpdate/DebugVarRequester.h
../DebugVarUpdate/LDebugVarReporter.auto.cpp
../DebugVarUpdate/LDebugVarReporter.auto.h
../DebugVarUpdate/RDebugVarReporter.auto.cpp
../DebugVarUpdate/RDebugVarReporter.auto.h
../DebugVarUpdate/Report.component
all.component
Arguments.cpp
Arguments.h
ArgWriter.h
Base.cpp
Base.h
Calls.h
ClassFactory.cpp
ClassFactory.h
CppWrapper.cpp
CppWrapper.h
EntityMap.cpp
EntityMap.h
GateKeeper.cpp
GateKeeper.h
IfaceRequester.h
Interfaces.h
P2PNode.h
Packets.h
Parser.cpp
Parser.h
PollJob.cpp
PollJob.h
ReplicationTypes.h
RPC.cpp
RPC.h
RpcArgs.cpp
RpcArgs.h
RpcDataProcessor.cpp
RpcDataProcessor.h
RpcEntityHandler.cpp
RpcEntityHandler.h
RpcGate.cpp
RpcGate.h
RPCMixin.component
RpcMultiPacketPipe.cpp
RpcMultiPacketPipe.h
RpcNode.cpp
RpcNode.h
RpcNodes.cpp
RpcNodes.h
RpcPipeEntities.cpp
RpcPipeEntities.h
RpcThreadPool.cpp
RpcThreadPool.h
RpcUtils.cpp
RpcUtils.h
simple.test.component
stdafx.cpp
stdafx.h
Transaction.cpp
TransportPipeTrackerFactory.cpp
TransportPipeTrackerFactory.h
TransportPipeTrafficTracker.cpp
TransportPipeTrafficTracker.h
Types.h
#../../Version.rc ExcludedFromBuild
WalkingRabbit.test.component
)
target_include_directories(RPC PRIVATE
${SRCROOT}
${SRCROOT}/Server)
add_library(RpcBase
RpcDataFactory.cpp
RpcDataFactory.h
stdafx.cpp
stdafx.h
#../../Version.rc ExcludedFromBuild
)
target_include_directories(RpcBase PRIVATE
${SRCROOT}
${SRCROOT}/Server)
