add_library(naio
Acceptor.cpp
Acceptor.h
AcceptorHandle.cpp
AcceptorHandle.h
BaseProtocol.cpp
BaseProtocol.h
BaseProtocolFactory.cpp
BaseProtocolFactory.h
Cfg.cpp
Cfg.h
Channel.cpp
Channel.h
ChannelContext.cpp
ChannelContext.h
ChannelManager.cpp
ChannelManager.h
ConnectionContext.cpp
ConnectionContext.h
Connector.cpp
Connector.h
Driver.cpp
Driver.h
Operation.cpp
Operation.h
Ops.cpp
Ops.h
OpScope.h
ProtocolHandler.h
specific.h
Status.h
stdafx.cpp
stdafx.h
ThreadPool.cpp
ThreadPool.h
Types.h
../../../Version.rc
)
target_include_directories(naio PRIVATE
${SRCROOT}
${CMAKE_CURRENT_SOURCE_DIR}/..
${SRCROOT}/port)
target_link_libraries(naio PRIVATE ace terabit)
