add_library(transport
specific.h
stdafx.cpp
stdafx.h
TLAddRecipientOp.cpp
TLAddRecipientOp.h
TLAddressResolver.h
TLCfg.cpp
TLCfg.h
TLChannel.cpp
TLChannel.h
TLChannelBase.cpp
TLChannelBase.h
TLChannelFactory.cpp
TLChannelFactory.h
TLChannelInt.cpp
TLChannelInt.h
TLChannelListener.cpp
TLChannelListener.h
TLChannelOp.cpp
TLChannelOp.h
TLChannelWrapper.cpp
TLChannelWrapper.h
TLCloseChannelOp.cpp
TLCloseChannelOp.h
TLConnection.cpp
TLConnection.h
TLConnectionManager.cpp
TLConnectionManager.h
TLConnectionOutputOp.cpp
TLConnectionOutputOp.h
TLDataHandler.cpp
TLDataHandler.h
TLDefaultLogCallback.cpp
TLDefaultLogCallback.h
TLGlobalCfg.cpp
TLGlobalCfg.h
TLInPlaceMessageBlockFactory.cpp
TLInPlaceMessageBlockFactory.h
TLMulticastChannel.cpp
TLMulticastChannel.h
TLOpenChannelOp.cpp
TLOpenChannelOp.h
TLOpsPtr.h
TLPingChannelOp.cpp
TLPingChannelOp.h
TLProtocolHandler.cpp
TLProtocolHandler.h
TLProtocolHandlerFactory.cpp
TLProtocolHandlerFactory.h
TLRemoveRecipientOp.cpp
TLRemoveRecipientOp.h
TLSendDataOp.cpp
TLSendDataOp.h
TLTransportModule.cpp
TLTransportModule.h
TLTransportProtocol.cpp
TLTransportProtocol.h
TLTypes.h
todo.txt
${SRCROOT}/Network/ClientTransportConfig.component
${SRCROOT}/Network/ClientTransportConfig.cpp
${SRCROOT}/Network/ClientTransportConfig.h
${SRCROOT}/Network/ClientTransportSystem2.cpp
${SRCROOT}/Network/ClientTransportSystem2.h
${SRCROOT}/Network/ClientTransportSystem3.cpp
${SRCROOT}/Network/ClientTransportSystem3.h
${SRCROOT}/Network/ClientTransportSystemIntf.h
${SRCROOT}/Network/SecondaryRelayCtx.cpp
${SRCROOT}/Network/SecondaryRelayCtx.h
../netlayer/NLNetworkHandler.cpp
../netlayer/NLNetworkHandler.h
../netlayer/specific.h
../netlayer/stdafx.cpp
../netlayer/stdafx.h
transport.refs
../../../Version.rc
)
target_include_directories(transport PRIVATE
${SRCROOT}
${CMAKE_CURRENT_SOURCE_DIR}/..
${SRCROOT}/port)
target_link_libraries(transport PRIVATE ace terabit)
